small fix on navbar collapse (products and cart misalligned), added clickable text on carrousel

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,9 +11,13 @@
 }
 .img-cart {
   min-width: 50px;
-  min-height:50px;
+  min-height: 50px;
 
   max-width: 100%;
   max-height: 100%;
-  object-fit:cover;
+  object-fit: cover;
 }
+
+li.dropdown{
+    text-align: center !important;
+  }
